[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
env_logger = "0.10.0"
itertools = "0.10"
lazy_static = "1.4.0"
log = "0.4.17"
multiset = "0.0.5"
pathfinding = "4.0.0"
regex = "1.7"
